[package]
name = "alt-crypt"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = {version = "0.5.3", features = ["zeroize"]}
aws-lc-rs = "1.15.4"
base64 = "0.22.1"
deku = "0.20.3"
ml-kem = {version = "0.3.0-rc.0", features = ["zeroize", "getrandom"]}
rand = {version = "0.10.0", features = []} # Feature "simd_support" is broken in 0.10.0
